src/components/album/album-styles.scss
.image-flex-wrap {
	margin: 0 15% 0;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-between;

	div {
		//margin-bottom: 2%;
	}

	p {
		max-width: 600px;
		font-size: 1.4em;
		letter-spacing: 1px;
		padding: 5% 0;
		margin: 0 auto;
		line-height: 1.5em;
	}

	img:not([src]) {
	  visibility: hidden;
	}

	/* Fixes Firefox anomaly */
	@-moz-document url-prefix() {
	    img:-moz-loading {
	        visibility: hidden;
	    }
	}
}

@media only screen and (max-width : 926px) {
	.image-flex-wrap {
		margin: 0;

		p {
			font-size: 1em;
			padding: 5%;
		}

		div {
			margin-bottom: 0;
		}
	}
}


.image-small {
	width: 49%;

		@media screen and (max-width: 926px) {
			width: 100%;
		}
}

.image-small.logo {
	display: flex;
	align-items: center;
  justify-content: center;
}

.image-small.logo img {
	width: 40%;
	height: auto;
	align-items: center;
}

.image-full {
	width: 100%;
}

img {
	width: 100%;
	height: 100%;
}

img[lazy=loading] {
 	background: url('../../assets/spinner.svg') no-repeat center center; 
}

